--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ doc = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["sphinxcontrib/skeleton"]
+only-include = ["sphinxcontrib"]
 
 [tool.hatch.envs.default]
 dependencies = [
@@ -104,7 +104,7 @@ docstring-quotes = "double"
 convention = "google"
 
 [tool.coverage.run]
-source = ["sphinxcontrib/skeleton"]
+source = ["sphinxcontrib.skeleton"]
 
 [tool.doc8]
 ignore = ["D001"] # we follow a 1 line = 1 paragraph style
