--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ update_changelog_on_bump = false
 version = "0.0.0"
 version_files = [
     "pyproject.toml:version",
-    "skeleton/__init__.py:__version__",
+    "sphinxcontrib/skeleton/__init__.py:__version__",
     "docs/conf.py:release",
 ]
 
