--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier
-_commit: 0.0.0
+_commit: 0.0.1-3-gdb9fddb
 _src_path: gh:sphinx-contrib/copier-sphinxcontrib
 author_email: firstname.lastname@domain.io
 author_first_name: Firstname
